--- a/.github/workflows/manutd.yml
+++ b/.github/workflows/manutd.yml
@@ -19,3 +19,12 @@ jobs:
       run: pip install requests beautifulsoup4
     - name: Run script
       run: python manutd.py
+    - name: Commit and push changes
+      run: |
+        git config --global user.name "GitHub Action"
+        git config --global user.email "action@github.com"
+        git add manchester_united_data.csv man_utd_comparison_rounds_per_season_data.csv
+        git commit -m "Update CSV files with new data" || echo "No changes to commit"
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
