--- a/.github/workflows/manutd.yml
+++ b/.github/workflows/manutd.yml
@@ -10,23 +10,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/checkout@v4
       with:
-        python-version: '3.x'
+        token: ${{ secrets.GITHUB_TOKEN }}  # Explicitly specify token for pushing
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
     - name: Install dependencies
-      run: pip install requests beautifulsoup4
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests beautifulsoup4
     - name: Run script
       run: python manutd.py
     - name: List files for debugging
       run: ls -l
     - name: Commit and push changes
       run: |
-        git config --global user.name "GitHub Action"
-        git config --global user.email "action@github.com"
-        git add manchester_united_data.csv man_utd_comparison_rounds_per_season_data.csv
-        git commit -m "Update CSV files with new data" || echo "No changes to commit"
-        git push
+        git config --global user.name "GitHub Actions Bot"
+        git config --global user.email "actions@github.com"
+        git add manchester_united_data.csv man_utd_comparison_rounds_per_season_data.csv || true
+        git commit -m "Automated update: $(date +'%Y-%m-%d')" || echo "No changes to commit"
+        git push || echo "No changes to push"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
