--- a/.github/workflows/manutd.yml
+++ b/.github/workflows/manutd.yml
@@ -24,12 +24,15 @@ jobs:
     - name: Run script
       run: python manutd.py
     - name: List files for debugging
-      run: ls -l
+      run: |
+        echo "Current directory: $(pwd)"
+        ls -l
     - name: Commit and push changes
       run: |
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "actions@github.com"
         git add manchester_united_data.csv man_utd_comparison_rounds_per_season_data.csv || true
+        git status
         git commit -m "Automated update: $(date +'%Y-%m-%d')" || echo "No changes to commit"
         git push || echo "No changes to push"
       env:
