--- a/.github/workflows/taxi.yml
+++ b/.github/workflows/taxi.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
-          git add taxi_licenses_historical.csv taxi_licenses_summary.csv || true
+          git pull origin main --rebase
+          git add .
           git commit -m "Automated update: $(date +'%Y-%m-%d')" || echo "No changes to commit"
-          git push || echo "No changes to push"
+          git push origin main || echo "No changes to push"
