--- a/.github/workflows/taxi.yml
+++ b/.github/workflows/taxi.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 pandas
+          pip install requests beautifulsoup4 pandas ipython
 
       - name: Run scraper script
         run: python taxi.py
