--- a/.github/workflows/manutd.yml
+++ b/.github/workflows/manutd.yml
@@ -9,29 +9,31 @@ jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # For pushing back
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests beautifulsoup4
-
-      - name: Run script
-        run: python manutd.py
-
-      - name: Commit and push changes
-        run: |
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "actions@github.com"
-          git pull origin main --rebase
-          git add manchester_united_data.csv man_utd_comparison_rounds_per_season_data.csv || true
-          git commit -m "Automated update: $(date +'%Y-%m-%d')" || echo "No changes to commit"
-          git push origin main || echo "No changes to push"
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}  # Explicitly specify token for pushing
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests beautifulsoup4
+    - name: Run script
+      run: python manutd.py
+    - name: List files for debugging
+      run: |
+        echo "Current directory: $(pwd)"
+        ls -l
+    - name: Commit and push changes
+      run: |
+        git config --global user.name "GitHub Actions Bot"
+        git config --global user.email "actions@github.com"
+        git add manchester_united_data.csv man_utd_comparison_rounds_per_season_data.csv || true
+        git status
+        git commit -m "Automated update: $(date +'%Y-%m-%d')" || echo "No changes to commit"
+        git push || echo "No changes to push"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
