--- a/.github/workflows/stadfangaskra.yml
+++ b/.github/workflows/stadfangaskra.yml
@@ -1,5 +1,3 @@
-name: staðfangaskrá
-
 on:
   schedule:
     - cron: '0 0 * * 0'  # Runs every Sunday at 00:00 UTC
@@ -8,11 +6,10 @@ on:
 jobs:
   process:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # For pushing back
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -20,17 +17,15 @@ jobs:
           python-version: '3.12'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pandas
+        run: pip install pandas
 
       - name: Run processing script
         run: python stadfangaskra.py
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "actions@github.com"
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
           git pull origin main --rebase
           git add stadfangaskra_trimmed.csv icelandic_addresses.csv || true
           git commit -m "Weekly update: Processed Icelandic addresses" || echo "No changes to commit"
