--- a/.github/workflows/manutd.yml
+++ b/.github/workflows/manutd.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4
+        pip install requests beautifulsoup4 pandas numpy
     - name: Run script
       run: python manutd.py
     - name: List files for debugging
