--- a/.github/workflows/manutd.yml
+++ b/.github/workflows/manutd.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}  # Explicitly specify token for pushing
+        token: ${{ secrets.GITHUB_TOKEN }}
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -27,13 +27,16 @@ jobs:
       run: |
         echo "Current directory: $(pwd)"
         ls -l
-    - name: Commit and push changes
+    - name: Commit and push changes if any
       run: |
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "actions@github.com"
-        git add manchester_united_data.csv man_utd_comparison_rounds_per_season_data.csv || true
-        git status
-        git commit -m "Automated update: $(date +'%Y-%m-%d')" || echo "No changes to commit"
-        git push || echo "No changes to push"
+        git add -A
+        if ! git diff --cached --quiet; then
+          git commit -m "Automated update: $(date +'%Y-%m-%d %H:%M:%S')"
+          git push
+        else
+          echo "No changes to commit"
+        fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
