--- a/.github/workflows/stadfangaskra.yml
+++ b/.github/workflows/stadfangaskra.yml
@@ -3,32 +3,41 @@ name: staðfangaskrá
 on:
   schedule:
     - cron: '0 0 * * 0'  # Runs every Sunday at 00:00 UTC
-  workflow_dispatch:  # Allows manual triggering from the GitHub UI
+  workflow_dispatch:
 
 jobs:
-  process:
+  run-script:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
 
-      - name: Install dependencies
-        run: pip install pandas
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pandas
 
-      - name: Run processing script
-        run: python stadfangaskra.py
+    - name: Run script
+      run: python stadfangaskra.py
 
-      - name: Commit and push changes
-        run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
-          git pull origin main --rebase
-          git add stadfangaskra_trimmed.csv icelandic_addresses.csv || true
-          git commit -m "Weekly update: Processed Icelandic addresses" || echo "No changes to commit"
-          git push origin main || echo "No changes to push"
+    - name: Commit and push changes if any
+      run: |
+        git config --global user.name "GitHub Actions Bot"
+        git config --global user.email "actions@github.com"
+        git add -A
+        if ! git diff --cached --quiet; then
+          git commit -m "Automated update: $(date +'%Y-%m-%d %H:%M:%S')"
+          git push
+        else
+          echo "No changes to commit"
+        fi
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
