--- a/.github/workflows/taxi.yml
+++ b/.github/workflows/taxi.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 pandas ipython
+        pip install requests beautifulsoup4 pandas
 
     - name: Run script
       run: python taxi.py
