--- a/.github/workflows/manutd.yml
+++ b/.github/workflows/manutd.yml
@@ -2,55 +2,70 @@ name: man utd Script
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs every hour at the start of the hour
+    - cron: '0 * * * *'   # every hour on the hour
   workflow_dispatch:
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
-    # Skip job if current hour is 00 to 11 (UTC)
-    if: ${{ steps.get-hour.outputs.hour >= 12 }}
     steps:
-    - name: Get current UTC hour
-      id: get-hour
-      run: echo "hour=$(date -u +%H)" >> $GITHUB_OUTPUT
+      # -------------------------------------------------
+      # 1. Get UTC hour and decide whether to run
+      # -------------------------------------------------
+      - name: Check allowed hour (12-23 UTC)
+        id: hour_check
+        run: |
+          H=$(date -u +%H)
+          echo "Current UTC hour: $H"
+          echo "hour=$H" >> $GITHUB_OUTPUT
+          if (( H >= 12 )); then
+            echo "run_job=true" >> $GITHUB_OUTPUT
+          else
+            echo "run_job=false" >> $GITHUB_OUTPUT
+          fi
 
-    - name: Debug current hour
-      run: echo "Current UTC hour: ${{ steps.get-hour.outputs.hour }}"
+      # -------------------------------------------------
+      # 2. All real work – only when run_job == true
+      # -------------------------------------------------
+      - name: Checkout repository
+        if: ${{ steps.hour_check.outputs.run_job == 'true' }}
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Python
+        if: ${{ steps.hour_check.outputs.run_job == 'true' }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+      - name: Install dependencies
+        if: ${{ steps.hour_check.outputs.run_job == 'true' }}
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests beautifulsoup4 pandas numpy
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 pandas numpy
+      - name: Run script
+        if: ${{ steps.hour_check.outputs.run_job == 'true' }}
+        run: python manutd.py
 
-    - name: Run script
-      run: python manutd.py
+      - name: List files for debugging
+        if: ${{ steps.hour_check.outputs.run_job == 'true' }}
+        run: |
+          echo "Current directory: $(pwd)"
+          ls -l
 
-    - name: List files for debugging
-      run: |
-        echo "Current directory: $(pwd)"
-        ls -l
-
-    - name: Commit and push changes if any
-      run: |
-        git config --global user.name "GitHub Actions Bot"
-        git config --global user.email "actions@github.com"
-        git add -A
-        if ! git diff --cached --quiet; then
-          git commit -m "Automated update: $(date +'%Y-%m-%d %H:%M:%S')"
-          git push
-        else
-          echo "No changes to commit"
-        fi
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit and push changes if any
+        if: ${{ steps.hour_check.outputs.run_job == 'true' }}
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+          git add -A
+          if ! git diff --cached --quiet; then
+            git commit -m "Automated update: $(date +'%Y-%m-%d %H:%M:%S')"
+            git push
+          else
+            echo "No changes to commit"
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
